--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,152 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/constraint_detail_all"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingVertical="24dp"
-            android:orientation="vertical"
-            android:gravity="center"
-            tools:context=".DetailActivity">
+        android:layout_height="wrap_content"
+        android:paddingTop="24dp"
+        android:orientation="vertical"
+        android:gravity="center"
+        tools:context=".DetailActivity">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_detail_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent">
+        <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/detail_img_user"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"/>
+        <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
+                app:cardCornerRadius="4dp"
+                app:layout_constraintStart_toStartOf="@id/detail_img_user"
+                app:layout_constraintEnd_toEndOf="@id/detail_img_user"
+                app:layout_constraintTop_toBottomOf="@id/detail_img_user"
+                android:translationY="-18dp"
                 android:layout_height="wrap_content">
-            <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/detail_img_user"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/user1"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"/>
-            <androidx.cardview.widget.CardView
+            <LinearLayout
                     android:layout_width="wrap_content"
-                    app:cardCornerRadius="4dp"
-                    app:layout_constraintStart_toStartOf="@id/detail_img_user"
-                    app:layout_constraintEnd_toEndOf="@id/detail_img_user"
-                    app:layout_constraintTop_toBottomOf="@id/detail_img_user"
-                    android:translationY="-18dp"
-                    android:layout_height="wrap_content">
-                <LinearLayout
+                    android:layout_height="wrap_content"
+                    android:paddingVertical="3dp"
+                    android:paddingHorizontal="8dp"
+                    tools:ignore="UseCompoundDrawables">
+                <ImageView android:layout_width="10dp"
+                           android:layout_height="match_parent"
+                           android:layout_gravity="center"
+                           android:layout_marginEnd="6dp"
+                           android:src="@drawable/git_icon"
+                           android:contentDescription="@string/repository_count_icon"/>
+                <TextView
+                        android:id="@+id/detail_tv_repository"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingVertical="3dp"
-                        android:paddingHorizontal="8dp"
-                        tools:ignore="UseCompoundDrawables">
-                    <ImageView android:layout_width="10dp"
-                               android:layout_height="match_parent"
-                               android:layout_gravity="center"
-                               android:layout_marginEnd="6dp"
-                               android:src="@drawable/git_icon"
-                               android:contentDescription="@string/repository_count_icon"/>
-                    <TextView
-                            android:id="@+id/detail_tv_repository"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:includeFontPadding="false"
-                            android:textStyle="bold"
-                            android:text="@string/repository"
-                            android:textSize="12sp"/>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-        <TextView
-                android:id="@+id/detail_tv_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textColor="@color/design_default_color_primary"
-                android:text="@string/salomo_hutapea"/>
-        <TextView
-                android:id="@+id/detail_tv_username"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:textColor="@color/design_default_color_secondary"
-                android:text="@string/salomohutapea"/>
-        <TextView
-                android:id="@+id/detail_tv_company"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:textSize="12sp"
-                android:text="@string/google"/>
-        <LinearLayout
-                android:layout_marginTop="10dp"
-                android:layout_width="wrap_content"
-                android:gravity="center"
-                android:layout_height="wrap_content">
+                        android:includeFontPadding="false"
+                        android:textStyle="bold"
+                        android:text="@string/repository"
+                        android:textSize="12sp"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+            android:id="@+id/detail_tv_name"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/constraint_detail_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="@color/design_default_color_primary"
+            android:text="@string/salomo_hutapea"/>
+    <TextView
+            android:id="@+id/detail_tv_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            app:layout_constraintTop_toBottomOf="@id/detail_tv_name"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:textColor="@color/design_default_color_secondary"
+            android:text="@string/salomohutapea"/>
+    <TextView
+            android:id="@+id/detail_tv_company"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/detail_tv_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:textSize="12sp"
+            android:text="@string/google"/>
+    <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:gravity="center"
+            android:id="@+id/linear_layout_follow"
+            app:layout_constraintTop_toBottomOf="@id/detail_tv_company"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_height="wrap_content">
 
-            <androidx.cardview.widget.CardView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="#55CCCCCC"
-                    android:layout_marginEnd="5dp">
-                <ImageView
-                        android:padding="2dp"
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:src="@drawable/ic_follow_icon"
-                        android:contentDescription="@string/user_follow_icon"/>
-            </androidx.cardview.widget.CardView>
-            <TextView
-                    android:id="@+id/detail_tv_followers"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:includeFontPadding="false"
-                    android:textStyle="bold"
-                    android:text="@string/_100"
-                    android:textSize="12sp"
-                    android:layout_marginEnd="2dp"/>
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:includeFontPadding="false"
-                    android:text="@string/followers"
-                    android:textSize="12sp"/>
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:includeFontPadding="false"
-                    android:textStyle="bold"
-                    android:text="@string/dot"
-                    android:layout_marginHorizontal="1dp"
-                    android:textSize="12sp"/>
-            <TextView
-                    android:id="@+id/detail_tv_following"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:includeFontPadding="false"
-                    android:textStyle="bold"
-                    android:text="@string/_200"
-                    android:textSize="12sp"
-                    android:layout_marginEnd="2dp"/>
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:includeFontPadding="false"
-                    android:text="@string/following"
-                    android:textSize="12sp"/>
-        </LinearLayout>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:textSize="12sp"
-                android:text="@string/location"/>
         <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
-            <fragment
-                    android:layout_width="300dp"
-                    android:layout_height="300dp"
-                    android:id="@+id/map"
-                    android:name="com.google.android.gms.maps.SupportMapFragment"/>
+                android:background="#55CCCCCC"
+                android:layout_marginEnd="5dp">
+            <ImageView
+                    android:padding="2dp"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@drawable/ic_follow_icon"
+                    android:contentDescription="@string/user_follow_icon"/>
         </androidx.cardview.widget.CardView>
+        <TextView
+                android:id="@+id/detail_tv_followers"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:textStyle="bold"
+                android:text="@string/_100"
+                android:textSize="12sp"
+                android:layout_marginEnd="2dp"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:text="@string/followers"
+                android:textSize="12sp"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:textStyle="bold"
+                android:text="@string/dot"
+                android:layout_marginHorizontal="1dp"
+                android:textSize="12sp"/>
+        <TextView
+                android:id="@+id/detail_tv_following"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:textStyle="bold"
+                android:text="@string/_200"
+                android:textSize="12sp"
+                android:layout_marginEnd="2dp"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:text="@string/following"
+                android:textSize="12sp"/>
     </LinearLayout>
-</ScrollView>
+    <TextView
+            android:id="@+id/detail_tv_location"
+            app:layout_constraintTop_toBottomOf="@id/linear_layout_follow"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:textSize="12sp"
+            android:text="@string/location"/>
+    <com.google.android.material.tabs.TabLayout
+            app:layout_constraintTop_toBottomOf="@id/detail_tv_location"
+            android:id="@+id/tabs"
+            android:layout_marginTop="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/design_default_color_secondary"
+            app:tabTextColor="@android:color/white"/>
+
+    <androidx.viewpager2.widget.ViewPager2
+            app:layout_constraintTop_toBottomOf="@id/tabs"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:id="@+id/view_pager"
+            android:paddingBottom="24dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    <ProgressBar
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_gravity="center"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
