--- a/app/src/main/res/layout/item_row_users.xml
+++ b/app/src/main/res/layout/item_row_users.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
@@ -9,65 +9,112 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/single_img_user"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginEnd="20dp"/>
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="60dp"
+            android:layout_height="60dp"/>
+    <TextView
+            app:layout_constraintLeft_toRightOf="@id/single_img_user"
+            app:layout_constraintTop_toTopOf="@id/single_img_user"
+            android:id="@+id/single_username_user"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/user_1"
+            android:textStyle="bold"
+            android:layout_marginStart="20dp"
+            android:textSize="20sp"
+            android:textColor="@color/design_default_color_primary"/>
+    <androidx.cardview.widget.CardView
+            android:id="@+id/single_card_repo"
+            app:layout_constraintLeft_toRightOf="@id/single_img_user"
+            app:layout_constraintTop_toBottomOf="@id/single_username_user"
+            android:layout_marginStart="20dp"
+            android:layout_width="wrap_content"
+            app:cardBackgroundColor="#55CCCCCC"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="4dp"
+            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content">
         <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:paddingVertical="3dp"
+                android:paddingHorizontal="8dp"
+                tools:ignore="UseCompoundDrawables">
+            <ImageView android:layout_width="10dp"
+                       android:layout_height="match_parent"
+                       android:layout_gravity="center"
+                       android:layout_marginEnd="6dp"
+                       android:src="@drawable/git_icon"
+                       android:contentDescription="@string/repository_count_icon"/>
             <TextView
-                    android:id="@+id/single_name_user"
+                    android:id="@+id/single_repo_user"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/user_1"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
-                    android:textColor="@color/design_default_color_primary"/>
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/dash"
-                    android:textSize="16sp"/>
-            <TextView
-                    android:id="@+id/single_username_user"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/user1"
-                    android:textSize="16sp"/>
+                    android:includeFontPadding="false"
+                    android:text="@string/repository"
+                    android:textSize="12sp"/>
         </LinearLayout>
+    </androidx.cardview.widget.CardView>
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:gravity="center"
+            android:layout_marginStart="10dp"
+            android:id="@+id/linear_layout_follow"
+            app:layout_constraintTop_toTopOf="@id/single_card_repo"
+            app:layout_constraintBottom_toBottomOf="@id/single_card_repo"
+            app:layout_constraintLeft_toRightOf="@id/single_card_repo"
+            android:layout_height="wrap_content">
+
         <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
-                app:cardBackgroundColor="#55CCCCCC"
-                app:cardElevation="0dp"
-                app:cardCornerRadius="4dp"
-                android:layout_marginTop="10dp"
-                android:layout_height="wrap_content">
-            <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingVertical="3dp"
-                    android:paddingHorizontal="8dp"
-                    tools:ignore="UseCompoundDrawables">
-                <ImageView android:layout_width="10dp"
-                           android:layout_height="match_parent"
-                           android:layout_gravity="center"
-                           android:layout_marginEnd="6dp"
-                           android:src="@drawable/git_icon"
-                           android:contentDescription="@string/repository_count_icon"/>
-                <TextView
-                        android:id="@+id/single_repo_user"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:includeFontPadding="false"
-                        android:text="@string/repository"
-                        android:textSize="12sp"/>
-            </LinearLayout>
+                android:layout_height="wrap_content"
+                android:background="#55CCCCCC"
+                android:layout_marginEnd="5dp">
+            <ImageView
+                    android:padding="2dp"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@drawable/ic_follow_icon"
+                    android:contentDescription="@string/user_follow_icon"/>
         </androidx.cardview.widget.CardView>
+        <TextView
+                android:id="@+id/single_tv_followers"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:textStyle="bold"
+                android:text="@string/_100"
+                android:textSize="12sp"
+                android:layout_marginEnd="2dp"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:text="@string/followers"
+                android:textSize="12sp"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:textStyle="bold"
+                android:text="@string/dot"
+                android:layout_marginHorizontal="1dp"
+                android:textSize="12sp"/>
+        <TextView
+                android:id="@+id/single_tv_following"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:textStyle="bold"
+                android:text="@string/_200"
+                android:textSize="12sp"
+                android:layout_marginEnd="2dp"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:text="@string/following"
+                android:textSize="12sp"/>
     </LinearLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
